--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -1,1 +1,29 @@
-
+<h1>Create a Team and Heroes!</h1>
+<form method="POST" action="/team">
+<label for='team[name]'>Team Name:</label>
+<input id="team_name" type="text" name="team[name]" >
+<label for='team[motto]'>Team Motto:</label>
+<input id="team_motto" type="text" name="team[motto]" >
+<h2>Hero 1</h2>
+<label for='team[members][][name]'>Name:</label>
+<input id="member1_name" type="text" name="team[members][][name]" >
+<label for='team[members][][power]'>Power:</label>
+<input id="member1_power" type="text" name="team[members][][power]" >
+<label for='team[members][][bio]'>Bio:</label>
+<input id="member1_bio" type="text" name="team[members][][bio]" >
+<h2>Hero 2</h2>
+<label for='team[members][][name]'>Name:</label>
+<input id="member2_name" type="text" name="team[members][][name]" >
+<label for='team[members][][[power]]'>Power:</label>
+<input id="member2_power" type="text" name="team[members][][power]" >
+<label for='team[members][][bio]'>Bio:</label>
+<input id="member2_bio" type="text" name="team[members][][bio]" >
+<h2>Hero 3</h2>
+<label for='team[members][][name]'>Name:</label>
+<input id="member3_name" type="text" name="team[members][][name]" >
+<label for='team[members][][power]'>Power:</label>
+<input id="member3_power" type="text" name="team[members][][power]" >
+<label for='team[members][][bio]'>Bio:</label>
+<input id="member3_bio" type="text" name="team[members][][bio]" >
+<input type="submit" id="submit">
+</form>
